Got the project compiling with java 11 and removed a bunch of warnings